--- a/TicTacToe_0412/angular_ver/css/style.css
+++ b/TicTacToe_0412/angular_ver/css/style.css
@@ -1,8 +1,8 @@
 .space{
 	display: inline-block;
-	border: 3px solid white;
-	width: 100px;
-	height: 100px;
+	margin: 2px;
+	width: 50px;
+	height: 50px;
 	background-color: gray;
 	color:white;
 	font-size: 15pt;
