--- a/TicTacToe_0412/angular_ver/css/connectfour.css
+++ b/TicTacToe_0412/angular_ver/css/connectfour.css
@@ -27,12 +27,16 @@ h2 {
 }
 
 
+
+
 .board {
 	margin: 0 auto;
-	width: 364px;
-	height: 313px;
+	width: 450px;
+	height: 400px;
+	padding: 12px;
 	border: 15px solid #f1ef5a;
 	border-radius: 15px;
+	background-color: yellow;
 /*	border:1px solid black;*/
 }
 
@@ -47,13 +51,13 @@ h2 {
 	padding: 15px;
 	width:50px; 
 	height:50px; 
-	border: 1px solid white;
-	background-color:rgba(0,0,0,0.3); 
+	border: 2px solid black;
+	background-color:white; 
 	color:white; 
 	font-size:15pt;
-	margin: 1px;
-	opacity: 0.8;
+	margin: 7px;
 	-webkit-mask-image: url('mouse-black.png');
+	border-radius: 25px;
 }
 
 .space:hover {
