--- a/TicTacToe_0412/angular_ver/css/tetris.css
+++ b/TicTacToe_0412/angular_ver/css/tetris.css
@@ -20,7 +20,37 @@ h2 {
 	font-weight: 100;
 }
 
+.main_container {
+
+}
+
+.score_left {
+	display: inline-block;
+	width: 200px;
+	text-align: right;
+	font-size: 140px;
+	margin-right: 30px;
+	color: red;
+}
+.score_right {
+	display: inline-block;
+	width: 200px;
+	text-align: left;
+	font-size: 140px;
+	margin-left: 30px;
+	color: blue;
+}
+
+.active {
+	font-weight: 900;
+	font-size: 180px;
+	transition: 0.5s;
+}
+
+
+
 .hover {
+	opacity: 1;
 	background-color: black;
 }
 
@@ -32,6 +62,7 @@ h2 {
 
 
 .board {
+	display: inline-block;
 	margin: 0 auto;
 	width: 416px;
 	height: 416px;
