--- a/TicTacToe_0412/angular_ver/css/tetris.css
+++ b/TicTacToe_0412/angular_ver/css/tetris.css
@@ -1,49 +1,160 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+@import url(http://fonts.googleapis.com/css?family=Lato:900);
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-	text-align: center;
-	font-family: Helvetica;
-	color: #b1b1b1;
-	-webkit-animation: fadein 1s ease-in;
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+*:focus {
+    outline: 0;
 }
 
+.winbox {
+	width: 500px;
+	height: 400px;
+	background-color: white;
+	margin: 0 auto;
+}
+
+
+body {
+	text-align: center;
+	font-family: 'Source Sans Pro', 'sans-serif';
+	color: #575757;
+	-webkit-animation: fadein 1s ease-in;
+}
+.title {
+	margin-top: 60px;
+	margin-bottom: 40px;
+}
+h1,h2,h3,h4,h5,h6 {
+	font-family: 'Lato', 'sans-serif';
+}
 h1 {
-	font-size: 50px;
+	font-size: 70px;
 	margin-bottom: 20px;
-	letter-spacing: -2px;
-	font-weight: 100;
-	-webkit-animation: fadeInDown 0.5s ease-in;
+	letter-spacing: 0px;
+	font-weight: 700;
+/*	-webkit-animation: fadeInDown 0.5s ease-in;*/
 }
 
 h2 {
 	font-size: 40px;
 	margin-bottom: 20px;
 	letter-spacing: -2px;
-	font-weight: 100;
+/*	font-weight: 100;*/
+	margin-bottom: 30px;
+}
+
+p {
+	width: 80%;
+	font-size: 22px;
+	max-width: 600px;
+	margin: 0 auto 20px auto;
+	text-align: center;
+	line-height: 140%;
+}
+
+input.name {
+	font-family: 'Source Sans Pro', 'sans-serif';
+	text-align:center;
+	font-size: 35px;
+	font-weight: 700;
+	width: 300px;
+  border: 0 solid white; 
+  padding: 15px;
+  background-color: #e0e0e0;
+  box-sizing: border-box;
+  margin-bottom: 20px
+}
+
+.intro {
+	margin: 40px auto 100px auto;
+	width: 500px;
+}
+
+.button {
+	font-size: 22px;
+	display: inline-block;
+	padding: 15px 30px;
+	background-color: #7ec3f6;
+	border-bottom: 6px solid #3e78b7;
+	box-sizing: border-box;
+	color: white;
+	margin-bottom: 20px;
+	width: 300px;
+}
+.button:hover {
+    background-color: #478dd7;
+  	transition: 0.5s;
 }
 
 .main_container {
 
 }
 
+span.strong {
+	font-weight: 900px;
+}
+
 .score_left {
 	display: inline-block;
 	width: 200px;
 	text-align: right;
-	font-size: 140px;
+	font-size: 100px;
 	margin-right: 30px;
-	color: red;
+	color: #7ec3f6;
 }
 .score_right {
 	display: inline-block;
 	width: 200px;
 	text-align: left;
-	font-size: 140px;
+	font-size: 100px;
 	margin-left: 30px;
-	color: blue;
+	color: #ff5021;
 }
 
 .active {
-	font-weight: 900;
-	font-size: 180px;
+	font-weight: 700;
+	font-size: 120px;
 	transition: 0.5s;
 }
 
@@ -98,11 +209,13 @@ h2 {
 }*/
 
 .player_one {
-	background-color: red;
+	background-color: #7ec3f6;
+	-webkit-animation: fadein .5s ease-in-out;
 }
 
 .player_two {
-	background-color: blue;
+	background-color: #ff5021;
+	-webkit-animation: fadein .5s ease-in-out;
 }
 
 .click {
