--- a/TicTacToe_0412/angular_ver/css/tetris.css
+++ b/TicTacToe_0412/angular_ver/css/tetris.css
@@ -17,8 +17,8 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	cursor: default;
 }
-@import url(http://fonts.googleapis.com/css?family=Lato:900);
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -131,8 +131,9 @@ input.name {
 
 }
 
-span.strong {
-	font-weight: 900px;
+strong {
+	font-weight: bold;
+	font-size: 1.2em;
 }
 
 .score_left {
