--- a/TicTacToe_0412/angular_ver/css/tetris.css
+++ b/TicTacToe_0412/angular_ver/css/tetris.css
@@ -20,6 +20,21 @@ time, mark, audio, video {
 	cursor: default;
 }
 
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('../SourceSansPro-Light.ttf');
+ /*   font-weight: normal;
+    font-style: normal;*/
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../Lato-Black.ttf');
+  /*  font-weight: 900;
+    font-style: normal;*/
+}
+
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -176,10 +191,6 @@ strong {
 .board {
 	display: inline-block;
 	margin: 0 auto;
-	width: 416px;
-	height: 416px;
-	/*
-	border:1px solid black;*/
 }
 
 .info {
@@ -197,7 +208,7 @@ strong {
 	background-color:rgba(0,0,0,0.3); 
 	color:white; 
 	font-size:15pt;
-	margin: 1px;
+	/*margin: 1px;*/
 	opacity: 0.8;
 	-webkit-mask-image: url('mouse-black.png');
 }
